# yap-language

./: .clang-tidy  .editorconfig  .env.template  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  Dockerfile  Makefile  README.md  build-llvm-mos  link.ld  llvm-tools  toolchain.cmake  tools
.github/: CODEOWNERS
.github/workflows/: lint-and-compile.yml
src/: benchmark.asm  benchmark.h  lexer.c  lexer.h  main.c  parser.c  parser.h  vm.c  vm.h
tests/: conditionals.c  conditionals_test.c  conditionals_test.h  global.c  global.h  lexer.c  lexer_test.c  lexer_test.h  loops_test.c  loops_test.h  main.c  parser.c  parser_test.c  parser_test.h  vm_test.c  vm_test.h
